# pain001-lsp

./: .codecov.yml  .gitattributes  .gitignore  .pre-commit-config.yaml  .releaserc.json  .safety-policy.yml  ARCHITECTURE.md  CHANGELOG.md  CODE-OF-CONDUCT.md  CONTRIBUTING.md  Dockerfile  GOVERNANCE.md  MANIFEST.in  Makefile  README.md  RELEASING.md  ROADMAP.md  SECURITY.md  SUPPORT.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  codeql.yml  docker.yml  docs.yml  nightly.yml  pr.yml  release.yml  security.yml
docs/: Makefile  api.md  conf.py  index.md
editors/vscode/: .vscodeignore  README.md  package.json  tsconfig.json
editors/vscode/src/: extension.ts
examples/: 01_lsp_helpers.py  02_quick_fix.py  03_configure_message_type.py  README.md
pain001_lsp/: __init__.py  server.py
scripts/: verify_versions.py
tests/: conftest.py  test_lsp_server.py  test_stdio_e2e.py
