[tool.poetry]
name = "pain001-lsp"
version = "0.0.52"
description = "Language Server Protocol (LSP) server for authoring pain001 ISO 20022 Customer Credit Transfer Initiation data files."
authors = ["Sebastien Rousseau <sebastian.rousseau@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/sebastienrousseau/pain001-lsp"
homepage = "https://pain001.com"
packages = [
    { include = "pain001_lsp" },
]

[tool.poetry.scripts]
pain001-lsp = "pain001_lsp.server:main"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
pain001 = ">=0.0.52"
pygls = ">=1.3,<2"
jsonschema = ">=4.17,<5"

[tool.poetry.group.dev.dependencies]
pytest = ">=9.0.3,<10.0.0"
pytest-cov = ">=6.0.0,<8.0.0"
black = "^24.0.0"
ruff = "^0.1.0"
mypy = "^1.11.0"
bandit = "^1.7.0"
interrogate = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
target-version = ['py310']

[tool.ruff]
line-length = 79
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
    "-ra",
    "--strict-markers",
]

[tool.coverage.run]
branch = true
source = ["pain001_lsp"]

[tool.coverage.report]
exclude_also = [
    "if __name__ == .__main__.:",
    "pragma: no cover",
    "@overload",
]
fail_under = 100
show_missing = true
skip_covered = false

[tool.interrogate]
fail-under = 100
ignore-init-method = true
ignore-semiprivate = false
ignore-private = false
ignore-magic = true
exclude = ["tests", "examples"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true
strict_equality = true
# server.py uses bare ``dict`` return annotations for its plain-dict payloads;
# allow them rather than editing the vendored server module.
disallow_any_generics = false

[[tool.mypy.overrides]]
module = "pain001.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_calls = false
warn_unused_ignores = false
disable_error_code = ["arg-type", "return-value", "attr-defined", "assignment"]

[[tool.mypy.overrides]]
module = "pygls.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "lsprotocol.*"
ignore_missing_imports = true
